--- a/index.html
+++ b/index.html
@@ -1,152 +1,51 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ohmyfood</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-
-<body>
-
-  <header class="Header">
-    <img src="/Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png" alt="logo">
-
-    <form>
-      <label class="location">
-
-      </label>
-    </form>
-  </header>
-
-<main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<footer>
-
-</footer>
-
-
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ohmyfood</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+
+  <body>
+    <header class="Header">
+      <img src="./images/logo/ohmyfood.png" alt="logo" />
+    </header>
+
+    <main>
+      <section class="location">
+        <i class="fa-map-marker-alt" aria-hidden="true"> </i>
+        <span class="location__text">Paris, Belleville</span>
+      </section>
+      <section class="typography">
+        <h2 class="typography__title">
+          Réservez le menu qui
+          <br />
+          vous convient
+        </h2>
+        <p class="typography__subtitle">
+          Découvrez les restaurants d'exception, séléctionnées par nos soins.
+        </p>
+        <a class="typography__btn">Explorer nos restaurants</a>
+      </section>
+      <section class="tuto">
+        <div class="container">
+          <h2 class="tuto__title">Fonctionnement</h2>
+          <ol class="tuto__steps">
+            <li class="tuto__step">
+              <i class="fa-mobile-alt"></i>
+              <span class="text">Choississez un restaurant</span>
+            </li>
+          </ol>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
