--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
       <section class="location">
-        <i class="fa-map-marker-alt" aria-hidden="true"> </i>
+        <i class="fa-map-marker-alt fas" aria-hidden="true"></i>
         <span class="location__text">Paris, Belleville</span>
       </section>
       <section class="typography">
@@ -39,10 +39,55 @@
           <h2 class="tuto__title">Fonctionnement</h2>
           <ol class="tuto__steps">
             <li class="tuto__step">
-              <i class="fa-mobile-alt"></i>
+              <i class="fa-mobile-alt fas tuto__icon" aria-hidden="true"></i>
               <span class="text">Choississez un restaurant</span>
             </li>
+            <li class="tuto__step">
+              <i class="fa-list-ul fas tuto__icon" aria-hidden="true"></i>
+              <span class="text">Composez votre menu</span>
+            </li>
+            <li class="tuto__step">
+              <i class="fa-store fas tuto__icon" aria-hidden="true"></i>
+              <span class="text">Dégustez au restaurant</span>
+            </li>
           </ol>
+        </div>
+      </section>
+      <section class="restaurants">
+        <div class="container">
+          <h2 class="restaurants_title">Restaurants</h2>
+          <div class="cards">
+            <a class="card">
+              <img
+                class="card__img"
+                src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image montrant un plat"
+              />
+              <span class="card__badge">Nouveau</span>
+              <div class="card-content">
+                <h3 class="card__title"> La palette du goût</h3>
+                <p>Ménilmontant</p>
+              </div>
+            </a>
+            <a class="card">
+              <img
+                class="card__img"
+                src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image montrant un plat"
+              />
+              <span class="card__badge">Nouveau</span>
+            </a>
+            <a class="card">
+              <img
+                class="card__img"
+                src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image montrant un plat"
+              />
+            </a>
+            <a class="card">
+              <img
+                class="card__img"
+                src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image montrant un plat"
+              />
+            </a>
+          </div>
         </div>
       </section>
     </main>
