--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ohmyfood</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,7 +15,7 @@
   </head>
 
   <body>
-    <header class="Header">
+    <header class="header">
       <img src="./images/logo/ohmyfood.png" alt="logo" />
     </header>
 
@@ -57,7 +58,7 @@
         <div class="container">
           <h2 class="restaurants_title">Restaurants</h2>
           <div class="cards">
-            <a class="card">
+            <a href="./Lapalettedugout.html" class="card">
               <img
                 class="card__img"
                 src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image montrant un plat"
