--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <h2 class="tuto__title">Fonctionnement</h2>
           <ol class="tuto__steps">
             <li class="tuto__step">
+              <span class="tuto__step__number">1</span>
               <i class="fa-mobile-alt fas tuto__icon" aria-hidden="true"></i>
               <span class="text">Choississez un restaurant</span>
             </li>
