--- a/index.html
+++ b/index.html
@@ -65,10 +65,15 @@
                 src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image montrant un plat"
               />
               <span class="card__badge">Nouveau</span>
+              <footer class="card__footer">
               <div class="card-content">
                 <h3 class="card__title"> La palette du goût</h3>
-                <p>Ménilmontant</p>
+                <span class="card__subtitle">Ménilmontant</span>
               </div>
+              <div class="card__btn">
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </div>
+            </footer>
             </a>
             <a class="card">
               <img
