--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ohmyfood - La palette du goût</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div>
+        <img src="./images/logo/ohmyfood.png">
+        <a href="./index.html">
+          <i class="fas fa-arrow-left"></i>
+        </a>
+      </div>
+    </header>
+    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg">
+    <main class="container menu">
+      <header class="menu__header">
+        <h2 class="menu__title">La palette du goût</h2>
+        <button class="menu__btn">
+          <i class=" fas fa-heart menu__heart" aria-hidden="true"></i>
+        </button>
+        <div>
+          <section class="entermenus">
+            <h3 class="entermenu__title">
+
+            </h3>
+          </section>
+        </div>
+      </header>
+    </main>
+  </body>
 </html>
