--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
               <span class="text">Choississez un restaurant</span>
             </li>
             <li class="tuto__step">
+              <span class="tuto__step__number">2</span>
               <i class="fa-list-ul fas tuto__icon" aria-hidden="true"></i>
               <span class="text">Composez votre menu</span>
             </li>
             <li class="tuto__step">
+              <span class="tuto__step__number">3</span>
               <i class="fa-store fas tuto__icon" aria-hidden="true"></i>
               <span class="text">Dégustez au restaurant</span>
             </li>
@@ -75,24 +77,51 @@
               </div>
             </footer>
             </a>
-            <a class="card">
+            <a href="./LaNoteEnchantée.html" class="card">
               <img
                 class="card__img"
                 src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image montrant un plat"
               />
               <span class="card__badge">Nouveau</span>
+              <footer class="card__footer">
+                <div>
+                  <h3 class="card__title">La note enchantée</h3>
+                  <span class="card__subtitle">Charonne</span>
+                </div>
+                <div class="card__btn">
+                  <i class="fa fa-heart" aria-hidden="true"></i>
+                </div>
+              </footer>
             </a>
-            <a class="card">
+            <a href="" class="card">
               <img
                 class="card__img"
                 src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image montrant un plat"
               />
+              <footer class="card__footer">
+                <div>
+                  <h3 class="card__title">A la française</h3>
+                  <span class="card__subtitle">Cité Rouge</span>
+                </div>
+                <div class="card__btn">
+                  <i class="fa fa-heart" aria-hidden="true"></i>
+                </div>
+              </footer>
             </a>
-            <a class="card">
+            <a href="LeDeliceDesSens" class="card">
               <img
                 class="card__img"
                 src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image montrant un plat"
               />
+              <footer class="card__footer">
+                <div>
+                  <h3 class="card__title">Le délice des sens</h3>
+                  <span class="card__subtitle">Folie-Méricourt</span>
+                </div>
+                <div class="card__btn">
+                  <i class=" fa fa-heart" aria-hidden="true"></i>
+                </div>
+              </footer>
             </a>
           </div>
         </div>
