--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
         <p class="typography__subtitle">
           Découvrez les restaurants d'exception, séléctionnées par nos soins.
         </p>
-        <a class="typography__btn">Explorer nos restaurants</a>
+        <a class="button">Explorer nos restaurants</a>
       </section>
       <section class="tuto">
         <div class="container">
           <h2 class="tuto__title">Fonctionnement</h2>
-          <ol class="tuto__steps">
-            <li class="tuto__step">
+          <div class="tuto__steps">
+            <article class="tuto__step">
               <span class="tuto__step__number">1</span>
               <i class="fa-mobile-alt fas tuto__icon" aria-hidden="true"></i>
-              <span class="text">Choississez un restaurant</span>
-            </li>
-            <li class="tuto__step">
+              <span>Choississez un restaurant</span>
+            </article>
+            <article class="tuto__step">
               <span class="tuto__step__number">2</span>
               <i class="fa-list-ul fas tuto__icon" aria-hidden="true"></i>
-              <span class="text">Composez votre menu</span>
-            </li>
-            <li class="tuto__step">
+              <span>Composez votre menu</span>
+            </article>
+            <article class="tuto__step">
               <span class="tuto__step__number">3</span>
               <i class="fa-store fas tuto__icon" aria-hidden="true"></i>
-              <span class="text">Dégustez au restaurant</span>
-            </li>
-          </ol>
+              <span>Dégustez au restaurant</span>
+            </article>
+          </div>
         </div>
       </section>
       <section class="restaurants">
