--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -23,20 +23,22 @@
       </div>
     </header>
     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg">
-    <main class="container menu">
-      <header class="menu__header">
-        <h2 class="menu__title">La palette du goût</h2>
-        <button class="menu__btn">
-          <i class=" fas fa-heart menu__heart" aria-hidden="true"></i>
-        </button>
+    <main>
+      <section class="menu">
         <div>
-          <section class="entermenus">
-            <h3 class="entermenu__title">
-
-            </h3>
-          </section>
+          <header class="menu__header">
+            <h1 class="menu__title">La palette du goût</h1>
+            <div>
+              <i class="fas fa-heart"></i>
+            </div>
+          </header>
+          <div class="menu__enter">
+            <div class="menu__list">
+              <h2>Entrées</h2>
+            </div>
+          </div>
         </div>
-      </header>
+      </section>
     </main>
   </body>
 </html>
