--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ohmyfood - La palette du goût</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,14 +22,15 @@
   <body>
     <header class="header">
       <div>
-        <img src="./images/logo/ohmyfood.png">
+        <img src="./images/logo/ohmyfood.png" />
         <a href="./index.html">
           <i class="fas fa-arrow-left"></i>
         </a>
       </div>
     </header>
-    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg">
     <main>
+      <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg"/>
+
       <section class="menu">
         <div>
           <header class="menu__header">
@@ -33,8 +40,38 @@
             </div>
           </header>
           <div class="menu__enter">
-            <div class="menu__list">
-              <h2>Entrées</h2>
+            <div class="menu__all">
+              <section class="menu__list">
+                <h2 class="menu__title__h2">Entrées</h2>
+                <article class="enter__item">
+                  <div class="enter__info">
+                    <div class="enter__text">
+                      <h3 class="enter__content">Fricassée d'escargots</h3>
+                      <p class="enter__detail">Au piment d'Espelette</p>
+                    </div>
+                    <p class="enter__price">25€</p>
+                  </div>
+                </article>
+                <article class="enter__item">
+                  <div class="enter__info">
+                    <div class="enter__text">
+                      <h3 class="enter__content">Foie de gras de canard mi-cuit</h3>
+                      <p class="enter__detail">Et ses copeaux de truffe noire</p>
+                    </div>
+                    <p class="enter__price">35€</p>
+                  </div>
+                </article>
+                <article class="enter__item">
+                  <div class="enter__info">
+                    <div class="enter__text">
+                      <h3 class="enter__content">Œuf au plat</h3>
+                      <p class="enter__detail">Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
+                    <p class="enter__price">20€</p>
+                  </div>
+
+                </article>
+              </section>
             </div>
           </div>
         </div>
