--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="./Lapalettedugout.html" class="card">
               <img
                 class="card__img"
-                src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image montrant un plat"
+                src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image montrant un plat"
               />
               <span class="card__badge">Nouveau</span>
               <footer class="card__footer">
@@ -80,7 +80,7 @@
             <a href="./LaNoteEnchantée.html" class="card">
               <img
                 class="card__img"
-                src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image montrant un plat"
+                src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image montrant un plat"
               />
               <span class="card__badge">Nouveau</span>
               <footer class="card__footer">
@@ -96,7 +96,7 @@
             <a href="" class="card">
               <img
                 class="card__img"
-                src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image montrant un plat"
+                src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image montrant un plat"
               />
               <footer class="card__footer">
                 <div>
@@ -111,7 +111,7 @@
             <a href="LeDeliceDesSens" class="card">
               <img
                 class="card__img"
-                src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image montrant un plat"
+                src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image montrant un plat"
               />
               <footer class="card__footer">
                 <div>
