--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
                 src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image montrant un plat"
               />
               <span class="card__badge">Nouveau</span>
-              <footer class="card__footer">
+              <div class="card__footer">
               <div class="card-content">
                 <h3 class="card__title"> La palette du goût</h3>
                 <span class="card__subtitle">Ménilmontant</span>
               </div>
-              <div class="card__btn">
+              <div class="card__heart">
                 <i class="fa fa-heart" aria-hidden="true"></i>
               </div>
-            </footer>
+            </div>
             </a>
             <a href="./LaNoteEnchantée.html" class="card">
               <img
@@ -83,45 +83,45 @@
                 src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image montrant un plat"
               />
               <span class="card__badge">Nouveau</span>
-              <footer class="card__footer">
+              <div class="card__footer">
                 <div>
                   <h3 class="card__title">La note enchantée</h3>
                   <span class="card__subtitle">Charonne</span>
                 </div>
-                <div class="card__btn">
+                <div class="card__heart">
                   <i class="fa fa-heart" aria-hidden="true"></i>
                 </div>
-              </footer>
+              </div>
             </a>
             <a href="" class="card">
               <img
                 class="card__img"
                 src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image montrant un plat"
               />
-              <footer class="card__footer">
+              <div class="card__footer">
                 <div>
                   <h3 class="card__title">A la française</h3>
                   <span class="card__subtitle">Cité Rouge</span>
                 </div>
-                <div class="card__btn">
+                <div class="card__heart">
                   <i class="fa fa-heart" aria-hidden="true"></i>
                 </div>
-              </footer>
+              </div>
             </a>
             <a href="LeDeliceDesSens" class="card">
               <img
                 class="card__img"
                 src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image montrant un plat"
               />
-              <footer class="card__footer">
+              <div class="card__footer">
                 <div>
                   <h3 class="card__title">Le délice des sens</h3>
                   <span class="card__subtitle">Folie-Méricourt</span>
                 </div>
-                <div class="card__btn">
+                <div class="card__heart">
                   <i class=" fa fa-heart" aria-hidden="true"></i>
                 </div>
-              </footer>
+              </div>
             </a>
           </div>
         </div>
