--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -17,16 +17,15 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="header">
-      <div>
-        <img src="./images/logo/ohmyfood.png" />
         <a href="./index.html">
           <i class="fas fa-arrow-left"></i>
         </a>
-      </div>
+        <img src="./images/logo/ohmyfood.png"/>
     </header>
     <main>
       <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg"/>
@@ -58,7 +57,10 @@
                       <h3 class="enter__content">Foie de gras de canard mi-cuit</h3>
                       <p class="enter__detail">Et ses copeaux de truffe noire</p>
                     </div>
-                    <p class="enter__price">35€</p>
+                    <div class="enter__price">35€</div>
+                    <div class="check">
+                      <i class="fa-solid fa-circle-check"></i>
+                    </div>
                   </div>
                 </article>
                 <article class="enter__item">
