--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                 </div>
                 <div class="card__heart">
                   <i class="fa fa-heart" aria-hidden="true"></i>
+                  <i class="fa-regular fa-heart empty__heart"></i>
                 </div>
               </div>
             </a>
@@ -105,6 +106,7 @@
                 </div>
                 <div class="card__heart">
                   <i class="fa fa-heart" aria-hidden="true"></i>
+                  <i class="fa-regular fa-heart"></i>
                 </div>
               </div>
             </a>
@@ -119,7 +121,8 @@
                   <span class="card__subtitle">Folie-Méricourt</span>
                 </div>
                 <div class="card__heart">
-                  <i class=" fa fa-heart" aria-hidden="true"></i>
+                  <i class=" fa fa-heart full__heart" aria-hidden="true"></i>
+                  <i class="fa-regular fa-heart empty__heart"></i>
                 </div>
               </div>
             </a>
