--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="enter__price">35€</div>
                     <div class="check">
-                      <i class="fa-solid fa-circle-check"></i>
+                      <i class="fa-solid fa-circle-check enter__icon"></i>
                     </div>
                   </div>
                 </article>
@@ -74,10 +74,104 @@
 
                 </article>
               </section>
+              <section>
+                <div class="menu__enter">
+            <div class="menu__all">
+              <section class="menu__list">
+                <h2 class="menu__title__h2">PLATS</h2>
+                <article class="flat__item">
+                  <div class="flat__info">
+                    <div class="flat__text">
+                      <h3 class="flat__content">Filet de bœuf aux herbes</h3>
+                      <p class="flat__detail">Accompagné de sa ribambelle de légumes</p>
+                    </div>
+                    <p class="flat__price">40€</p>
+                  </div>
+                </article>
+                <article class="flat__item">
+                  <div class="flat__info">
+                    <div class="flat__text">
+                      <h3 class="flat__content">Parmentier de queue de bœuf</h3>
+                      <p class="flat__detail">À la truffe noire sur sa purée de panais</p>
+                    </div>
+                    <div class="flat__price">35€</div>
+                    <div class="check">
+                      <i class="fa-solid fa-circle-check enter__icon"></i>
+                    </div>
+                  </div>
+                </article>
+                <article class="flat__item">
+                  <div class="flat__info">
+                    <div class="flat__text">
+                      <h3 class="flat__content">Filet de turbot</h3>
+                      <p class="flat__detail">Aux agrumes</p>
+                    </div>
+                    <p class="flat__price">44€</p>
+                  </div>
+
+                </article>
+              </section>
+              <section>
+                <div class="menu__enter">
+            <div class="menu__all">
+              <section class="menu__list">
+                <h2 class="menu__title__h2">DESSERTS</h2>
+                <article class="desserts__item">
+                  <div class="desserts__info">
+                    <div class="desserts__text">
+                      <h3 class="desserts__content">Paris-Brest</h3>
+                      <p class="desserts__detail">Revisité</p>
+                    </div>
+                    <p class="desserts__price">18€</p>
+                  </div>
+                </article>
+                <article class="desserts__item">
+                    <div class="desserts__info">
+                    <div class="desserts__text">
+                      <h3 class="desserts__content">Macaron au chocolat d'exception</h3>
+                      <p class="desserts__detail">Et glace à la vanille de Madagascar</p>
+                    </div>
+                    <div class="desserts__price">22€</div>
+                    <div class="check">
+                      <i class="fa-solid fa-circle-check enter__icon"></i>
+                    </div>
+                  </div>
+                </article>
+                <article class="desserts__item">
+                  <div class="desserts__info">
+                    <div class="desserts__text">
+                      <h3 class="desserts__content">Mousse au chocolat</h3>
+                      <p class="desserts__detail">Au piment d'Espelette et à la truffe noire</p>
+                    </div>
+                    <p class="desserts__price">23€</p>
+                  </div>
+
+                </article>
+              </section>
             </div>
           </div>
-        </div>
       </section>
+
     </main>
+    <footer class="footer">
+      <h3 class="footer__title">Ohmyfood</h3>
+      <nav>
+        <a class="footer__link">
+          <i class="fa-solid fa-utensils"></i>
+          <h4>Proposer un restaurant</h4>
+        </a>
+        <a class="footer__link">
+          <i class="fa-solid fa-handshake-angle"></i>
+          <h4>Devernir partenaire</h4>
+        </a>
+        <a class="footer__link">
+          <h4>Mention légales</h4>
+        </a>
+        <a class="footer__link">
+          <h4>Contact</h4>
+        </a>
+      </nav>
+    </footer>
+
   </body>
 </html>
