--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                 <span class="card__subtitle">Ménilmontant</span>
               </div>
               <div class="card__heart">
-                <i class="fa fa-heart" aria-hidden="true"></i>
+                <i class="fa fa-heart full__heart" aria-hidden="true"></i>
+                <i class="fa-regular fa-heart empty__heart"></i>
               </div>
             </div>
             </a>
@@ -89,7 +90,7 @@
                   <span class="card__subtitle">Charonne</span>
                 </div>
                 <div class="card__heart">
-                  <i class="fa fa-heart" aria-hidden="true"></i>
+                  <i class="fa fa-heart full__heart" aria-hidden="true"></i>
                   <i class="fa-regular fa-heart empty__heart"></i>
                 </div>
               </div>
@@ -105,8 +106,8 @@
                   <span class="card__subtitle">Cité Rouge</span>
                 </div>
                 <div class="card__heart">
-                  <i class="fa fa-heart" aria-hidden="true"></i>
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa fa-heart full__heart" aria-hidden="true"></i>
+                  <i class="fa-regular fa-heart empty__heart"></i>
                 </div>
               </div>
             </a>
@@ -130,6 +131,24 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <h3 class="footer__title">Ohmyfood</h3>
+      <nav>
+        <a class="footer__link">
+          <i class="fa-solid fa-utensils"></i>
+          <h4>Proposer un restaurant</h4>
+        </a>
+        <a class="footer__link">
+          <i class="fa-solid fa-handshake-angle"></i>
+          <h4>Devernir partenaire</h4>
+        </a>
+        <a class="footer__link">
+          <h4>Mention légales</h4>
+        </a>
+        <a class="footer__link">
+          <h4>Contact</h4>
+        </a>
+      </nav>
+    </footer>
   </body>
 </html>
