--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -23,12 +23,12 @@
   <body>
     <header class="header">
         <a href="./index.html">
-          <i class="fas fa-arrow-left"></i>
+          <i class="header__arrow fas fa-arrow-left"></i>
         </a>
         <img src="./images/logo/ohmyfood.png"/>
     </header>
     <main>
-      <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="cardimg"/>
+      <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg"/>
 
       <section class="menu">
         <div>
@@ -41,7 +41,7 @@
           <div class="menu__enter">
             <div class="menu__all">
               <section class="menu__list">
-                <h2 class="menu__title__h2">Entrées</h2>
+                <h2 class="menu__title__h2">ENTRÉES</h2>
                 <article class="enter__item">
                   <div class="enter__info">
                     <div class="enter__text">
@@ -156,7 +156,9 @@
                 </article>
               </section>
             </div>
-            <a class="button">Commander</a>
+            <div class="commander">
+            <a class="commander__btn">Commander</a>
+            </div>
           </div>
       </section>
 
