--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -23,7 +23,7 @@
   <body>
     <header class="header">
         <a href="./index.html">
-          <i class="fas fa-arrow-left"></i>
+          <i class=" header__arrow fas fa-arrow-left"></i>
         </a>
         <img src="./images/logo/ohmyfood.png"/>
     </header>
@@ -41,7 +41,7 @@
           <div class="menu__enter">
             <div class="menu__all">
               <section class="menu__list">
-                <h2 class="menu__title__h2">Entrées</h2>
+                <h2 class="menu__title__h2">ENTRÉES</h2>
                 <article class="enter__item">
                   <div class="enter__info">
                     <div class="enter__text">
@@ -49,6 +49,9 @@
                       <p class="enter__detail">Au piment d'Espelette</p>
                     </div>
                     <p class="enter__price">25€</p>
+                    <div class="check">
+                      <i class="fa-solid fa-circle-check enter__icon"></i>
+                    </div>
                   </div>
                 </article>
                 <article class="enter__item">
@@ -70,6 +73,9 @@
                       <p class="enter__detail">Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <p class="enter__price">20€</p>
+                    <div class="check">
+                      <i class="fa-solid fa-circle-check enter__icon"></i>
+                    </div>
                   </div>
 
                 </article>
@@ -86,6 +92,9 @@
                       <p class="flat__detail">Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <p class="flat__price">40€</p>
+                    <div class="check">
+                      <i class="fa-solid fa-circle-check enter__icon"></i>
+                    </div>
                   </div>
                 </article>
                 <article class="flat__item">
@@ -107,6 +116,9 @@
                       <p class="flat__detail">Aux agrumes</p>
                     </div>
                     <p class="flat__price">44€</p>
+                    <div class="check">
+                      <i class="fa-solid fa-circle-check enter__icon"></i>
+                    </div>
                   </div>
 
                 </article>
@@ -144,10 +156,16 @@
                       <p class="desserts__detail">Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <p class="desserts__price">23€</p>
+                    <div class="check">
+                      <i class="fa-solid fa-circle-check enter__icon"></i>
+                    </div>
                   </div>
 
                 </article>
               </section>
+            </div>
+            <div class="commander">
+              <a class="commander__btn">Commander</a>
             </div>
           </div>
       </section>
