--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -38,7 +38,7 @@
               <i class="fas fa-heart"></i>
             </div>
           </header>
-          <div class="menu__enter">
+          
             <div class="menu__all">
               <section class="menu__list">
                 <h2 class="menu__title__h2">ENTRÉES</h2>
@@ -81,7 +81,6 @@
                 </article>
               </section>
               <section>
-                <div class="menu__enter">
             <div class="menu__all">
               <section class="menu__list">
                 <h2 class="menu__title__h2">PLATS</h2>
@@ -119,12 +118,10 @@
                     <div class="check">
                       <i class="fa-solid fa-circle-check enter__icon"></i>
                     </div>
-                  </div>
 
                 </article>
               </section>
               <section>
-                <div class="menu__enter">
             <div class="menu__all">
               <section class="menu__list">
                 <h2 class="menu__title__h2">DESSERTS</h2>
@@ -135,6 +132,8 @@
                       <p class="desserts__detail">Revisité</p>
                     </div>
                     <p class="desserts__price">18€</p>
+                    <div class="check">
+                      <i class="fa-solid fa-circle-check enter__icon"></i>
                   </div>
                 </article>
                 <article class="desserts__item">
@@ -167,7 +166,6 @@
             <div class="commander">
               <a class="commander__btn">Commander</a>
             </div>
-          </div>
       </section>
 
     </main>
