--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
               </div>
             </a>
-            <a href="" class="card">
+            <a href="./AlaFrancaise.html" class="card">
               <img
                 class="card__img"
                 src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image montrant un plat"
@@ -111,7 +111,7 @@
                 </div>
               </div>
             </a>
-            <a href="LeDeliceDesSens" class="card">
+            <a href="./Ledelicedessens.html" class="card">
               <img
                 class="card__img"
                 src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image montrant un plat"
@@ -140,7 +140,7 @@
         </a>
         <a class="footer__link">
           <i class="fa-solid fa-handshake-angle"></i>
-          <h4>Devernir partenaire</h4>
+          <h4>Devenir partenaire</h4>
         </a>
         <a class="footer__link">
           <h4>Mention légales</h4>
