--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
 
   <body>
+    <span class="loader"></span>
     <header class="header">
       <img src="./images/logo/ohmyfood.png" alt="logo" />
     </header>
@@ -28,9 +29,7 @@
       </section>
       <section class="typography">
         <h2 class="typography__title">
-          Réservez le menu qui
-          <br />
-          vous convient
+          Réservez le menu qui vous convient
         </h2>
         <p class="typography__subtitle">
           Découvrez les restaurants d'exception, séléctionnées par nos soins.
