--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -83,7 +83,7 @@
               </section>
               <section>
                 <div class="menu__enter">
-            <div class="menu__all">
+            <div>
               <section class="menu__list">
                 <h2 class="menu__title__h2">PLATS</h2>
                 <article class="flat__item">
