--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -39,7 +39,7 @@
             </div>
           </header>
           
-            <div class="menu__all">
+            <div>
               <section class="menu__list">
                 <h2 class="menu__title__h2">ENTRÉES</h2>
                 <article class="enter__item">
@@ -81,7 +81,7 @@
                 </article>
               </section>
               <section>
-            <div class="menu__all">
+            <div>
               <section class="menu__list">
                 <h2 class="menu__title__h2">PLATS</h2>
                 <article class="flat__item">
@@ -122,7 +122,7 @@
                 </article>
               </section>
               <section>
-            <div class="menu__all">
+            <div>
               <section class="menu__list">
                 <h2 class="menu__title__h2">DESSERTS</h2>
                 <article class="desserts__item">
@@ -166,6 +166,7 @@
             <div class="commander">
               <a class="commander__btn">Commander</a>
             </div>
+        </div>
       </section>
 
     </main>
@@ -178,7 +179,7 @@
         </a>
         <a class="footer__link">
           <i class="fa-solid fa-handshake-angle"></i>
-          <h4>Devernir partenaire</h4>
+          <h4>Devenir partenaire</h4>
         </a>
         <a class="footer__link">
           <h4>Mention légales</h4>
