--- a/LeDeliceDesSens.html
+++ b/LeDeliceDesSens.html
@@ -39,7 +39,7 @@
             </div>
           </header>
           
-            <div class="menu__all">
+            <div>
               <section class="menu__list">
                 <h2 class="menu__title__h2">ENTRÉES</h2>
                 <article class="enter__item">
@@ -81,7 +81,7 @@
                 </article>
               </section>
               <section>
-            <div class="menu__all">
+            <div>
               <section class="menu__list">
                 <h2 class="menu__title__h2">PLATS</h2>
                 <article class="flat__item">
@@ -122,7 +122,7 @@
                 </article>
               </section>
               <section>
-            <div class="menu__all">
+            <div>
               <section class="menu__list">
                 <h2 class="menu__title__h2">DESSERTS</h2>
                 <article class="desserts__item">
