--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -34,8 +34,9 @@
         <div>
           <header class="menu__header">
             <h1 class="menu__title">À la française</h1>
-            <div>
-              <i class="fas fa-heart"></i>
+            <div class="card__heart">
+              <i class="fa fa-heart full__heart" aria-hidden="true"></i>
+              <i class="fa-regular fa-heart empty__heart"></i>
             </div>
           </header>
           
