--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -34,8 +34,9 @@
         <div>
           <header class="menu__header">
             <h1 class="menu__title">La note enchantée</h1>
-            <div>
-              <i class="fas fa-heart"></i>
+            <div class="card__heart">
+              <i class="fa fa-heart full__heart" aria-hidden="true"></i>
+              <i class="fa-regular fa-heart empty__heart"></i>
             </div>
           </header>
           <div class="menu__enter">
@@ -164,15 +165,15 @@
 
     </main>
     <footer class="footer">
-            <h3 class="footer__title">Ohmyfood</h3>
+            <h2 class="footer__title">Ohmyfood</h2>
             <nav>
               <a class="footer__link">
                 <i class="fa-solid fa-utensils"></i>
-                <h4>Proposer un restaurant</h4>
+                <h3>Proposer un restaurant</h3>
               </a>
               <a class="footer__link">
                 <i class="fa-solid fa-handshake-angle"></i>
-                <h4>Devernir partenaire</h4>
+                <h3>Devernir partenaire</h3>
               </a>
               <a class="footer__link">
                 <h4>Mention légales</h4>
