--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -32,12 +32,13 @@
 
       <section class="menu">
         <div>
-          <header class="menu__header">
+          <div class="menu__header">
             <h1 class="menu__title">La palette du goût</h1>
-            <div>
-              <i class="fas fa-heart"></i>
+            <div class="card__heart">
+              <i class="fa fa-heart full__heart" aria-hidden="true"></i>
+              <i class="fa-regular fa-heart empty__heart"></i>
             </div>
-          </header>
+          </div>
           
             <div>
               <section class="menu__list">
