--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -171,15 +171,15 @@
                 <i class="fa-solid fa-utensils"></i>
                 <h3>Proposer un restaurant</h3>
               </a>
-              <a class="footer__link">
+              <a class="footer__link footer__space">
                 <i class="fa-solid fa-handshake-angle"></i>
                 <h3>Devernir partenaire</h3>
               </a>
               <a class="footer__link">
-                <h4>Mention légales</h4>
+                <h4 class="footer__style">Mentions légales</h4>
               </a>
               <a class="footer__link">
-                <h4>Contact</h4>
+                <h4 class="footer__style">Contact</h4>
               </a>
             </nav>
           </footer>
