--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -178,15 +178,15 @@
           <i class="fa-solid fa-utensils"></i>
           <h4>Proposer un restaurant</h4>
         </a>
-        <a class="footer__link">
+        <a class="footer__link footer__space">
           <i class="fa-solid fa-handshake-angle"></i>
           <h4>Devenir partenaire</h4>
         </a>
         <a class="footer__link">
-          <h4>Mention légales</h4>
+          <h4 class="footer__style">Mentions légales</h4>
         </a>
         <a class="footer__link">
-          <h4>Contact</h4>
+          <h4 class="footer__style">Contact</h4>
         </a>
       </nav>
     </footer>
