--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -25,10 +25,10 @@
         <a href="./index.html">
           <i class=" header__arrow fas fa-arrow-left"></i>
         </a>
-        <img src="./images/logo/ohmyfood.png"/>
+        <img src="./images/logo/ohmyfood.png" alt="logo"/>
     </header>
     <main>
-      <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="cardimg"/>
+      <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="cardimg" alt="image montrant un plat"/>
 
       <section class="menu">
         <div>
@@ -119,9 +119,11 @@
                     <div class="check">
                       <i class="fa-solid fa-circle-check enter__icon"></i>
                     </div>
+                  </div>
 
                 </article>
               </section>
+            </div>
               <section>
             <div>
               <section class="menu__list">
@@ -147,6 +149,7 @@
                     <div class="check">
                       <i class="fa-solid fa-circle-check enter__icon"></i>
                     </div>
+                    </div>
                   </div>
                 </article>
                 <article class="desserts__item">
@@ -160,13 +163,15 @@
                       <i class="fa-solid fa-circle-check enter__icon"></i>
                     </div>
                   </div>
-
                 </article>
+              </section>
+
               </section>
             </div>
             <div class="commander">
               <a class="commander__btn">Commander</a>
             </div>
+        </div>
       </section>
 
     </main>
