--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -25,20 +25,20 @@
         <a href="./index.html">
           <i class="header__arrow fas fa-arrow-left"></i>
         </a>
-        <img src="./images/logo/ohmyfood.png"/>
+        <img src="./images/logo/ohmyfood.png" alt="logo"/>
     </header>
     <main>
-      <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg"/>
+      <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg" alt="image montrant un plat"/>
 
       <section class="menu">
         <div>
-          <header class="menu__header">
+          <div class="menu__header">
             <h1 class="menu__title">La note enchantée</h1>
             <div class="card__heart">
               <i class="fa fa-heart full__heart" aria-hidden="true"></i>
               <i class="fa-regular fa-heart empty__heart"></i>
             </div>
-          </header>
+          </div>
           <div class="menu__enter">
             <div class="menu__all">
               <section class="menu__list">
