--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -25,10 +25,10 @@
         <a href="./index.html">
           <i class=" header__arrow fas fa-arrow-left"></i>
         </a>
-        <img src="./images/logo/ohmyfood.png"/>
+        <img src="./images/logo/ohmyfood.png" alt="logo"/>
     </header>
     <main>
-      <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg"/>
+      <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg" alt="image montrant un plat"/>
 
       <section class="menu">
         <div>
