--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </header>
 
     <main>
-      <section class="location">
+      <div class="location">
         <i class="fa-map-marker-alt fas" aria-hidden="true"></i>
         <span class="location__text">Paris, Belleville</span>
-      </section>
+      </div>
       <section class="typography">
         <h2 class="typography__title">
           Réservez le menu qui vous convient
@@ -40,21 +40,21 @@
         <div class="container">
           <h2 class="tuto__title">Fonctionnement</h2>
           <div class="tuto__steps">
-            <article class="tuto__step">
+            <div class="tuto__step">
               <span class="tuto__step__number">1</span>
               <i class="fa-mobile-alt fas tuto__icon" aria-hidden="true"></i>
               <span>Choississez un restaurant</span>
-            </article>
-            <article class="tuto__step">
+            </div>
+            <div class="tuto__step">
               <span class="tuto__step__number">2</span>
               <i class="fa-list-ul fas tuto__icon" aria-hidden="true"></i>
               <span>Composez votre menu</span>
-            </article>
-            <article class="tuto__step">
+            </div>
+            <div class="tuto__step">
               <span class="tuto__step__number">3</span>
               <i class="fa-store fas tuto__icon" aria-hidden="true"></i>
               <span>Dégustez au restaurant</span>
-            </article>
+            </div>
           </div>
         </div>
       </section>
